--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 
 body {
   font-family: Arial, sans-serif;
-  background-color: #111827; /* Tailwind gray-900 */
+  background-color: #121d35; /* Tailwind gray-900 */
   color: #ffffff;
   line-height: 1.6;
 }
@@ -55,6 +55,12 @@ a:hover {
   text-align: center;
   margin-bottom: 2rem;
 }
+.section-text-center{
+  font-size: 1.2rem;
+  margin-top: 1rem;
+  opacity: 0;
+  text-align: center;
+}
 
 /* Grid */
 .grid {
@@ -78,5 +84,3 @@ a:hover {
   transition: transform 0.3s ease;
 }
 
-.card:hover {
-  transf
