--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,8 @@
 
 body {
   font-family: Arial, sans-serif;
-  background-color: #121d35; /* Tailwind gray-900 */
+  background-image: "background.jpg";
+ background-color: #121d35;  /*Tailwind gray-900 */
   color: #ffffff;
   line-height: 1.6;
 }
